added bcrypt, jwt, and debugger tools

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start:server": "nodemon ./api/server.js",
+    "debug": "nodemon --inspect ./api/server.js",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
