--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "nodemon ./api/server.js",
+    "start": "node ./api/server.js",
     "debug": "nodemon --inspect ./api/server.js",
     "test": "jest",
     "lint": "eslint ."
